--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "A simple AngularJS dashboard",
   "main": "index.js",
   "scripts": {
+    "less": "lessc --source-map src/css/style.less src/css/style.css",
     "mkdir": "shx rm -rf plugins/ && shx mkdir plugins/",
     "cp-ng": "shx cp -r node_modules/angular/ plugins/angular/",
     "cp-bs": "shx cp -r node_modules/bootstrap/dist/ plugins/bootstrap/",
     "cp-fa": "shx cp -r node_modules/font-awesome/ plugins/font-awesome/",
     "cp-jq": "shx cp -r node_modules/jquery/dist/ plugins/jquery/",
-    "build": "npm run mkdir -s && npm run cp-ng -s && npm run cp-bs -s && npm run cp-fa -s && npm run cp-jq -s",
+    "build": "npm run less -s && npm run mkdir -s && npm run cp-ng -s && npm run cp-bs -s && npm run cp-fa -s && npm run cp-jq -s",
     "test": "http-server ./ -o -c0"
   },
   "repository": {
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "http-server": "^0.9.0",
+    "less": "^2.7.2",
     "shx": "^0.2.2"
   }
 }
